Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.1
-
ce005eae5 (dev)
Description
When referencing a C++ based type contained in the implicit import, qmlcachegen and other compile time tools will accept it, but the QML engine at run time won't.
Since the implicit import is of lowest priority I can't see a way to use this to miscompile, but it is still bad.
Which way should we resolve it? Should the engine load C++-based types from the implicit import or should the compile time tools reject them?
Attachments
Issue Links
- resulted from
-
QTBUG-109048 qmlsc crashes with enum method parameters
-
- Closed
-