tests/auto/qml/qmlcppcodegen/data/CxxTypeFromDir.qml
@@ -1,0 +1,11 @@
+pragma Strict
+import QtQml
+import "."
+
+QtObject {
+    objectName: p.name
+    property Person p: Person {
+        id: p
+        name: "horst"
+    }
+}
