tests/auto/qml/qmlcppcodegen/data/CxxTypeFromImplicit.qml
@@ -1,0 +1,10 @@
+pragma Strict
+import QtQml
+
+QtObject {
+    objectName: p.name
+    property Person p: Person {
+        id: p
+        name: "guenther"
+    }
+}
