tests/auto/qml/qmlcppcodegen/data/usingCxxTypesFromFileImports.qml
@@ -1,0 +1,9 @@
+pragma Strict
+import QtQml
+
+QtObject {
+    objectName: a.objectName + " " + b.objectName
+    property CxxTypeFromDir a: CxxTypeFromDir { id: a }
+    property CxxTypeFromImplicit b: CxxTypeFromImplicit { id: b }
+
+}
